# requiem

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
docs/: requiem.rs
src/: action.rs  audio.rs  enemy.rs  game.rs  hud.rs  lib.rs  main.rs  player.rs  projectile.rs  render.rs  spawner.rs  upgrades.rs  util.rs  xp.rs
web/: index.html
