[package]
name = "requiem"
version = "1.0.0"
edition = "2024"
description = "REQUIEM: A brutal, minimalist bullet heaven. A WASM Artifact."
license = "MIT"
repository = "https://github.com/ujjwalvivek/requiem"

[lib]
name = "requiem"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "requiem-game"
path = "src/main.rs"

[dependencies]
engine = { package = "journey-engine", version = "1.1.2" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
